--- a/springBootDemo2001/src/main/resources/config/application.properties
+++ b/springBootDemo2001/src/main/resources/config/application.properties
@@ -13,6 +13,26 @@ spring.devtools.restart.additional-paths=src/main/java
 server.ssl.key-store=classpath:.keystore
 server.ssl.key-password=111111
 
+# for data source
+# mysql 5
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# mysql 6 +
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+spring.datasource.username=root
+spring.datasource.password=123456
+
+# hikari pool
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=180000
+spring.datasource.hikari.auto-commit=true
+
+# for mybatis
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=com.thornBird.sbd.modules.*.entity
+mybatis.mapper-locations=classpath:mapper/*Mapper.xml
+
 #for test
 com.thorn.bird.name=zhangsan
 com.thorn.bird.age = 24
