"2020-4-24 作业：多参数查询、多条件脚本查询、update、delete、事务、自动生成表"

--- a/springBootDemo2001/pom.xml
+++ b/springBootDemo2001/pom.xml
@@ -47,6 +47,12 @@
 		    <version>1.2.12</version>
 		</dependency>
 		
+		<!-- jpa -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		
 		<!-- spring dev tools -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
