--- a/springBootDemo2001/src/main/resources/config/application.properties
+++ b/springBootDemo2001/src/main/resources/config/application.properties
@@ -33,6 +33,10 @@ mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=com.thornBird.sbd.modules.*.entity
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 
+# for jpa
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
 #for test
 com.thorn.bird.name=zhangsan
 com.thorn.bird.age = 24
